// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/monitoring/requestpanel/request should render 1`] = `
<div
  className="msla-trace-inputs-outputs"
>
  <div
    className="msla-trace-inputs-outputs-header"
  >
    <div
      className="msla-trace-inputs-outputs-header-text"
    >
      Request
    </div>
  </div>
  <div
    className="msla-trace-values"
  >
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Method
      </label>
      <div
        className="msla-colorizer-json-body"
      >
        <div
          aria-label="Method"
          aria-readonly={true}
          className="msla-colorizer-wrapper"
          role="textbox"
          tabIndex={0}
        >
          <pre
            className="prism-code language-json"
            style={
              Object {
                "backgroundColor": "#ffffff",
                "color": "#000000",
              }
            }
          >
            <div
              className="token-line"
              style={
                Object {
                  "backgroundColor": null,
                  "color": "#000000",
                }
              }
            >
              <span
                className="token plain"
              >
                GET
              </span>
            </div>
          </pre>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        URI
      </label>
      <div
        className="msla-colorizer-json-body"
      >
        <div
          aria-label="URI"
          aria-readonly={true}
          className="msla-colorizer-wrapper"
          role="textbox"
          tabIndex={0}
        >
          <pre
            className="prism-code language-json"
            style={
              Object {
                "backgroundColor": "#ffffff",
                "color": "#000000",
              }
            }
          >
            <div
              className="token-line"
              style={
                Object {
                  "backgroundColor": null,
                  "color": "#000000",
                }
              }
            >
              <span
                className="token plain"
              >
                https
              </span>
              <span
                className="token operator"
                style={
                  Object {
                    "color": "rgb(0, 0, 0)",
                  }
                }
              >
                :
              </span>
              <span
                className="token comment"
                style={
                  Object {
                    "color": "rgb(0, 128, 0)",
                  }
                }
              >
                //httpbin.org/get
              </span>
            </div>
          </pre>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Headers
      </label>
      <div
        className="msla-trace-value-text msla-trace-value-key-value-pairs"
      >
        <div
          className="ms-Viewport"
          style={
            Object {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
        >
          <div
            className="ms-DetailsList ms-DetailsList--Compact is-horizontalConstrained root-109"
            data-automationid="DetailsList"
            data-is-scrollable="false"
          >
            <div
              aria-colcount={2}
              aria-label="Headers"
              aria-rowcount={1}
              role="grid"
            >
              <div
                className="ms-DetailsList-headerWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  aria-label="Headers"
                  className="ms-FocusZone css-127 ms-DetailsHeader root-111"
                  data-automationid="DetailsHeader"
                  data-focuszone-id="FocusZone2"
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDownCapture={[Function]}
                  onMouseMove={[Function]}
                  role="row"
                >
                  <div
                    aria-label="Key"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-128"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="$key"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-136"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-134"
                        id="header1-$key"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-135"
                          id="header1-$key-name"
                        >
                          Key
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-118 cellSizerStart-119"
                    data-is-focusable={false}
                    data-sizer-index={0}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-label="Value"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-128"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="$value"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-136"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-134"
                        id="header1-$value"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-135"
                          id="header1-$value-name"
                        >
                          Value
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-118 cellSizerEnd-120"
                    data-is-focusable={false}
                    data-sizer-index={1}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                </div>
              </div>
              <div
                className="ms-DetailsList-contentWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  className="ms-SelectionZone"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onDoubleClick={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDown={[Function]}
                  onKeyDownCapture={[Function]}
                  onMouseDown={[Function]}
                  onMouseDownCapture={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-FocusZone css-127 focusZone-110"
                    data-focuszone-id="FocusZone3"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDownCapture={[Function]}
                  >
                    <div
                      className="ms-List"
                    >
                      <div
                        className="ms-List-surface"
                        role="presentation"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`lib/monitoring/requestpanel/request should render a body 1`] = `
<div
  className="msla-trace-inputs-outputs"
>
  <div
    className="msla-trace-inputs-outputs-header"
  >
    <div
      className="msla-trace-inputs-outputs-header-text"
    >
      Request
    </div>
  </div>
  <div
    className="msla-trace-values"
  >
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Method
      </label>
      <div
        className="msla-colorizer-json-body"
      >
        <div
          aria-label="Method"
          aria-readonly={true}
          className="msla-colorizer-wrapper"
          role="textbox"
          tabIndex={0}
        >
          <pre
            className="prism-code language-json"
            style={
              Object {
                "backgroundColor": "#ffffff",
                "color": "#000000",
              }
            }
          >
            <div
              className="token-line"
              style={
                Object {
                  "backgroundColor": null,
                  "color": "#000000",
                }
              }
            >
              <span
                className="token plain"
              >
                POST
              </span>
            </div>
          </pre>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        URI
      </label>
      <div
        className="msla-colorizer-json-body"
      >
        <div
          aria-label="URI"
          aria-readonly={true}
          className="msla-colorizer-wrapper"
          role="textbox"
          tabIndex={0}
        >
          <pre
            className="prism-code language-json"
            style={
              Object {
                "backgroundColor": "#ffffff",
                "color": "#000000",
              }
            }
          >
            <div
              className="token-line"
              style={
                Object {
                  "backgroundColor": null,
                  "color": "#000000",
                }
              }
            >
              <span
                className="token plain"
              >
                https
              </span>
              <span
                className="token operator"
                style={
                  Object {
                    "color": "rgb(0, 0, 0)",
                  }
                }
              >
                :
              </span>
              <span
                className="token comment"
                style={
                  Object {
                    "color": "rgb(0, 128, 0)",
                  }
                }
              >
                //httpbin.org/post
              </span>
            </div>
          </pre>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Headers
      </label>
      <div
        className="msla-trace-value-text msla-trace-value-key-value-pairs"
      >
        <div
          className="ms-Viewport"
          style={
            Object {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
        >
          <div
            className="ms-DetailsList ms-DetailsList--Compact is-horizontalConstrained root-109"
            data-automationid="DetailsList"
            data-is-scrollable="false"
          >
            <div
              aria-colcount={2}
              aria-label="Headers"
              aria-rowcount={1}
              role="grid"
            >
              <div
                className="ms-DetailsList-headerWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  aria-label="Headers"
                  className="ms-FocusZone css-127 ms-DetailsHeader root-111"
                  data-automationid="DetailsHeader"
                  data-focuszone-id="FocusZone6"
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDownCapture={[Function]}
                  onMouseMove={[Function]}
                  role="row"
                >
                  <div
                    aria-label="Key"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-128"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="$key"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-136"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-134"
                        id="header5-$key"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-135"
                          id="header5-$key-name"
                        >
                          Key
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-118 cellSizerStart-119"
                    data-is-focusable={false}
                    data-sizer-index={0}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-label="Value"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-128"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="$value"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-136"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-134"
                        id="header5-$value"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-135"
                          id="header5-$value-name"
                        >
                          Value
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-118 cellSizerEnd-120"
                    data-is-focusable={false}
                    data-sizer-index={1}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                </div>
              </div>
              <div
                className="ms-DetailsList-contentWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  className="ms-SelectionZone"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onDoubleClick={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDown={[Function]}
                  onKeyDownCapture={[Function]}
                  onMouseDown={[Function]}
                  onMouseDownCapture={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-FocusZone css-127 focusZone-110"
                    data-focuszone-id="FocusZone7"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDownCapture={[Function]}
                  >
                    <div
                      className="ms-List"
                    >
                      <div
                        className="ms-List-surface"
                        role="presentation"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Body
      </label>
      <div
        className="msla-colorizer-json-body"
      >
        <div
          aria-label="Body"
          aria-readonly={true}
          className="msla-colorizer-wrapper"
          role="textbox"
          tabIndex={0}
        >
          <pre
            className="prism-code language-json"
            style={
              Object {
                "backgroundColor": "#ffffff",
                "color": "#000000",
              }
            }
          >
            <div
              className="token-line"
              style={
                Object {
                  "backgroundColor": null,
                  "color": "#000000",
                }
              }
            >
              <span
                className="token punctuation"
                style={
                  Object {
                    "color": "rgb(4, 81, 165)",
                  }
                }
              >
                {
              </span>
              <span
                className="token plain"
              />
            </div>
            <div
              className="token-line"
              style={
                Object {
                  "backgroundColor": null,
                  "color": "#000000",
                }
              }
            >
              <span
                className="token plain"
              >
                  
              </span>
              <span
                className="token property"
              >
                "hello"
              </span>
              <span
                className="token operator"
                style={
                  Object {
                    "color": "rgb(0, 0, 0)",
                  }
                }
              >
                :
              </span>
              <span
                className="token plain"
              >
                 
              </span>
              <span
                className="token string"
                style={
                  Object {
                    "color": "rgb(163, 21, 21)",
                  }
                }
              >
                "world!"
              </span>
              <span
                className="token plain"
              />
            </div>
            <div
              className="token-line"
              style={
                Object {
                  "backgroundColor": null,
                  "color": "#000000",
                }
              }
            >
              <span
                className="token plain"
              />
              <span
                className="token punctuation"
                style={
                  Object {
                    "color": "rgb(4, 81, 165)",
                  }
                }
              >
                }
              </span>
            </div>
          </pre>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`lib/monitoring/requestpanel/request should render a body link 1`] = `
<div
  className="msla-trace-inputs-outputs"
>
  <div
    className="msla-trace-inputs-outputs-header"
  >
    <div
      className="msla-trace-inputs-outputs-header-text"
    >
      Request
    </div>
  </div>
  <div
    className="msla-trace-values"
  >
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Method
      </label>
      <div
        className="msla-colorizer-json-body"
      >
        <div
          aria-label="Method"
          aria-readonly={true}
          className="msla-colorizer-wrapper"
          role="textbox"
          tabIndex={0}
        >
          <pre
            className="prism-code language-json"
            style={
              Object {
                "backgroundColor": "#ffffff",
                "color": "#000000",
              }
            }
          >
            <div
              className="token-line"
              style={
                Object {
                  "backgroundColor": null,
                  "color": "#000000",
                }
              }
            >
              <span
                className="token plain"
              >
                POST
              </span>
            </div>
          </pre>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        URI
      </label>
      <div
        className="msla-colorizer-json-body"
      >
        <div
          aria-label="URI"
          aria-readonly={true}
          className="msla-colorizer-wrapper"
          role="textbox"
          tabIndex={0}
        >
          <pre
            className="prism-code language-json"
            style={
              Object {
                "backgroundColor": "#ffffff",
                "color": "#000000",
              }
            }
          >
            <div
              className="token-line"
              style={
                Object {
                  "backgroundColor": null,
                  "color": "#000000",
                }
              }
            >
              <span
                className="token plain"
              >
                https
              </span>
              <span
                className="token operator"
                style={
                  Object {
                    "color": "rgb(0, 0, 0)",
                  }
                }
              >
                :
              </span>
              <span
                className="token comment"
                style={
                  Object {
                    "color": "rgb(0, 128, 0)",
                  }
                }
              >
                //httpbin.org/post
              </span>
            </div>
          </pre>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Headers
      </label>
      <div
        className="msla-trace-value-text msla-trace-value-key-value-pairs"
      >
        <div
          className="ms-Viewport"
          style={
            Object {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
        >
          <div
            className="ms-DetailsList ms-DetailsList--Compact is-horizontalConstrained root-109"
            data-automationid="DetailsList"
            data-is-scrollable="false"
          >
            <div
              aria-colcount={2}
              aria-label="Headers"
              aria-rowcount={1}
              role="grid"
            >
              <div
                className="ms-DetailsList-headerWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  aria-label="Headers"
                  className="ms-FocusZone css-127 ms-DetailsHeader root-111"
                  data-automationid="DetailsHeader"
                  data-focuszone-id="FocusZone10"
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDownCapture={[Function]}
                  onMouseMove={[Function]}
                  role="row"
                >
                  <div
                    aria-label="Key"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-128"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="$key"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-136"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-134"
                        id="header9-$key"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-135"
                          id="header9-$key-name"
                        >
                          Key
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-118 cellSizerStart-119"
                    data-is-focusable={false}
                    data-sizer-index={0}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                  <div
                    aria-label="Value"
                    aria-sort="none"
                    className="ms-DetailsHeader-cell is-actionable root-128"
                    data-automationid="ColumnsHeaderColumn"
                    data-is-draggable={false}
                    data-is-focusable="true"
                    data-item-key="$value"
                    draggable={false}
                    role="columnheader"
                    style={
                      Object {
                        "width": 120,
                      }
                    }
                  >
                    <span
                      className="cellTooltip-136"
                    >
                      <span
                        className="ms-DetailsHeader-cellTitle cellTitle-134"
                        id="header9-$value"
                        onClick={[Function]}
                        onContextMenu={[Function]}
                      >
                        <span
                          className="ms-DetailsHeader-cellName cellName-135"
                          id="header9-$value-name"
                        >
                          Value
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    aria-hidden={true}
                    className="ms-DetailsHeader-cellSizer cellSizer-118 cellSizerEnd-120"
                    data-is-focusable={false}
                    data-sizer-index={1}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    role="button"
                  />
                </div>
              </div>
              <div
                className="ms-DetailsList-contentWrapper"
                onKeyDown={[Function]}
                role="presentation"
              >
                <div
                  className="ms-SelectionZone"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onDoubleClick={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDown={[Function]}
                  onKeyDownCapture={[Function]}
                  onMouseDown={[Function]}
                  onMouseDownCapture={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-FocusZone css-127 focusZone-110"
                    data-focuszone-id="FocusZone11"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDownCapture={[Function]}
                  >
                    <div
                      className="ms-List"
                    >
                      <div
                        className="ms-List-surface"
                        role="presentation"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      className="msla-trace-value-label"
    >
      <label
        className="msla-trace-value-display-name"
      >
        Body
      </label>
      <div
        className="msla-trace-value-text"
      >
        <a
          aria-label="Alt/Option + click to download {displayName}"
          className="ms-Link root-141"
          href="[REDACTED]"
          onClick={[Function]}
          rel="noopener"
          target="_blank"
        >
          Download (Alt/Option + click)
        </a>
      </div>
    </section>
  </div>
</div>
`;
